--- a/src/InventoryManagement.Web/Pages/Products/Product/Product/Index.cshtml
+++ b/src/InventoryManagement.Web/Pages/Products/Product/Product/Index.cshtml
@@ -19,6 +19,7 @@
 @section scripts
 {
     <abp-script src="/Pages/Products/Product/Product/index.js" />
+    <abp-script src="/Pages/Products/Product/Product/createModal.js" />
 }
 @section styles
 {
