--- a/src/InventoryManagement.Web/Pages/Categories/WarehouseManager/Goods/Index.cshtml
+++ b/src/InventoryManagement.Web/Pages/Categories/WarehouseManager/Goods/Index.cshtml
@@ -20,6 +20,7 @@
 {
     <abp-script src="/Pages/Categories/WarehouseManager/Goods/index.js" />
     <abp-script src="/Pages/Categories/WarehouseManager/Goods/createModal.js" />
+    <abp-script src="/Pages/Categories/WarehouseManager/Goods/editModal.js" />
 }
 @section styles
 {
