--- a/src/InventoryManagement.Web/Pages/Categories/WarehouseManager/Goods/EditModal.cshtml
+++ b/src/InventoryManagement.Web/Pages/Categories/WarehouseManager/Goods/EditModal.cshtml
@@ -7,7 +7,7 @@
 @{
     Layout = null;
 }
-<abp-dynamic-form abp-model="ViewModel" data-ajaxForm="true" asp-page="EditModal">
+@*<abp-dynamic-form abp-model="ViewModel" data-ajaxForm="true" asp-page="EditModal">
     <abp-modal>
         <abp-modal-header title="@L["EditGoods"].Value"></abp-modal-header>
         <abp-modal-body>
@@ -16,4 +16,39 @@
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
     </abp-modal>
-</abp-dynamic-form>
+</abp-dynamic-form>*@
+
+<form abp-model="ViewModel" data-ajaxForm="true" asp-page="EditModal">
+    <abp-modal size="Large">
+        <abp-modal-header title="@L["EditGoods"].Value"></abp-modal-header>
+         <abp-modal-body>
+             <abp-input asp-for="Id"/>
+             <abp-input asp-for="ViewModel.GoodsName"/>
+             <abp-input asp-for="ViewModel.Note"/>
+             <abp-input asp-for="ViewModel.UnitOfGood"/>
+             <abp-row>
+                 <abp-column>
+                     <abp-table striped-rows="true" id="UnitLeftTable" class="nowrap">
+                         <thead>
+                            <tr>
+                                <th>@L["UnitName"]</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                     </abp-table>
+                 </abp-column>
+                 <abp-column>
+                     <abp-table striped-rows="true" id="UnitRightTable" class="nowrap">
+                         <thead>
+                            <tr>
+                                <th></th>
+                                <th>@L["UnitName"]</th>
+                            </tr>
+                        </thead>
+                     </abp-table>
+                 </abp-column>
+             </abp-row>
+         </abp-modal-body>
+         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
+    </abp-modal>
+</form>
